--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Ajax.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Ajax.cshtml
@@ -26,7 +26,7 @@
 
         <pre><code>@@(await Html
     .SimpleGrid(Model)
-    .AddColumnsFromModel()
+    .AddColumnsForModel()
     .Sortable()
     .AddPager(options =>
     {
