--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/BulletList.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/BulletList.cshtml
@@ -30,7 +30,7 @@
         .For(movie => movie.Name))
 
     .AddColumn(col => col
-        .Header("Cast")
+        .Header("Cast & Character")
         .DisplayAsList(movie => movie.Cast))
 
     .AddColumn(col => col
