--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Form2.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Form2.cshtml
@@ -71,7 +71,7 @@ public IActionResult Form2()
 public IActionResult Form2(Movie[] movies)
 {
     return View(movies.AsQueryable())
-        .Success($"Recieved: {movies.Length} movies");
+        .Success($"Received: {movies.Length} movies");
 }</code></pre>
 
     </div>
