--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/RowModifier.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/RowModifier.cshtml
@@ -6,7 +6,7 @@
 @(await Html
     .SimpleGrid(Model)
 
-    .AddColumnsFromModel()
+    .AddColumnsForModel()
 
     .AddRowModifier(
         movie => movie.Director.Contains("James"), 
@@ -25,7 +25,7 @@
         <pre><code>@@(await Html
     .SimpleGrid(Model)
 
-    .AddColumnsFromModel()
+    .AddColumnsForModel()
 
     .AddRowModifier(
         movie => movie.Director.Contains("James"), 
