--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/_PartialGrid.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/_PartialGrid.cshtml
@@ -3,7 +3,7 @@
 
 @(await Html
     .SimpleGrid(Model)
-    .AddColumnsFromModel()
+    .AddColumnsForModel()
     .Sortable()
     .AddPager(options =>
     {
