--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Options.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Options.cshtml
@@ -5,7 +5,7 @@
 
 @(await Html
     .SimpleGrid(Model)
-    .AddColumnsFromModel()
+    .AddColumnsForModel()
     .Options(options =>
     {
         // Prevent the Grid from pulling a million records
@@ -25,7 +25,7 @@
 
         <pre><code>@@(await Html
     .SimpleGrid(Model)
-    .AddColumnsFromModel()
+    .AddColumnsForModel()
     .Options(options =>
     {
         // Prevent the Grid from pulling a million records
@@ -49,7 +49,7 @@
 
 @(await Html
     .SimpleGrid(Model.Take(0))
-    .AddColumnsFromModel()
+    .AddColumnsForModel()
     .Options(options =>
     {
         options.NoMatchingRecordsHtml = "Sorry buddy, there nothing here for you...";
@@ -63,7 +63,7 @@
 
         <pre><code>@@(await Html
     .SimpleGrid(Model.Take(0))
-    .AddColumnsFromModel()
+    .AddColumnsForModel()
     .Options(options =>
     {
         options.NoMatchingRecordsHtml = 
