--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Pagination.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Pagination.cshtml
@@ -5,7 +5,7 @@
 
 @(await Html
     .SimpleGrid(Model)
-    .AddColumnsFromModel()
+    .AddColumnsForModel()
     .AddPager(options =>
     {
         options.RowsPerPage = 3;
@@ -23,7 +23,7 @@
 
         <pre><code>@@(await Html
     .SimpleGrid(Model)
-    .AddColumnsFromModel()
+    .AddColumnsForModel()
     .AddPager(options =>
     {
         options.RowsPerPage = 3;
