--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Template.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Template.cshtml
@@ -5,7 +5,7 @@
 
 @(await Html
     .SimpleGrid(Model.Take(3))
-    .AddColumnsFromModel()
+    .AddColumnsForModel()
     .RenderAsync())
 
     </div>
