Added TimeTracker support and documentation in README

--- a/Sockethead.Web/Areas/Samples/Views/Shared/_SocketheadLayout.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Shared/_SocketheadLayout.cshtml
@@ -68,6 +68,7 @@
             - Eike Consulting, LLC
             - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             - <span>Env: @webHostEnv.EnvironmentName</span>
+            - <span>Time: @Html.ElaspsedPageRenderTimeMs() ms</span>
         </div>
     </footer>
 
