--- a/Sockethead.Web/Areas/Samples/Views/_ViewImports.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Sockethead.Web.Data.Entities;
 @using Sockethead.Razor.Grid;
+@using Sockethead.Razor.Diagnostics;
 @using Sockethead.Web.Areas.Samples.ViewModels;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
