Fixed warnings in project for missing routes and Razor syntax warnings.

--- a/Sockethead.Web/Areas/Samples/Views/FormBuilder/FormBuilder.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/FormBuilder/FormBuilder.cshtml
@@ -50,7 +50,7 @@
 
         <hr />
 
-        @using (Html.BeginForm(actionName: "FormBuilder", controllerName: "Pager", method: FormMethod.Post))
+        @using (Html.BeginForm(actionName: "FormBuilder", controllerName: "FormBuilder", method: FormMethod.Post))
         {
             @Html.ValidationSummary(excludePropertyErrors: true, message: null, htmlAttributes: new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
