--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Installation.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Installation.cshtml
@@ -2,17 +2,43 @@
 
 <div class="row">
 
-    <div class="col-md-6">
+    <div class="col-md-8">
 
         <h4>Install the latest Package</h4>
         <pre><code>PM> Install-Package Sockethead.Razor
 </code></pre>
 
         <p>
-            <br />
             Then bam, you're ready to start creating SimpleGrids!  No JavaScript or CSS includes are necessary.
-            <br />
-            <br />
+        </p>
+
+        <br/>
+        
+        <h4>Register Sockethead Area</h4>
+        <p>
+            Some features such as the Pager and Search require the Sockethead controller routes which lives in
+            the Sockethead "Area."  Thus you must make sure to register Areas in your startup:
+        </p>
+        <pre><code>app.UseEndpoints(endpoints =>
+{
+   endpoints.MapControllerRoute(
+       name: "areas",
+       pattern: "{area:exists}/{controller=Home}/{action=Index}/{id?}");
+
+   endpoints.MapControllerRoute(
+       name: "default",
+       pattern: "{controller=Home}/{action=Index}/{id?}");
+
+   endpoints.MapRazorPages();
+});</code></pre>
+        <p>
+           Note: the Areas must be mapped BEFORE the controller routes. 
+        </p>
+        
+        <br/>
+        
+        <h4>Include Namespace (optional)</h4>
+        <p>
             You may also want to include the namespace in your ViewImports.cshtml:<br />
             <code>@@using Sockethead.Razor.Grid;</code>
         </p>
