Sockethead.Razor: Minor refactoring and tweaks

--- a/Sockethead.Razor/Views/Shared/_SHFormSubmitButton.cshtml
+++ b/Sockethead.Razor/Views/Shared/_SHFormSubmitButton.cshtml
@@ -1,4 +1,4 @@
-﻿@model Sockethead.Razor.Forms.SubmitButtonVm
+﻿@model Sockethead.Razor.Forms.SubmitButton
 
 @if (string.IsNullOrEmpty(Model.Action))
 {
