Sockethead.Web: Update demo site with form builder examples

--- a/Sockethead.Web/Areas/Samples/Views/Home/Dashboard.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Home/Dashboard.cshtml
@@ -19,7 +19,7 @@
         {
             Name = "Form Builder",
             Url = "/Samples/FormBuilder/FormBuilder",
-            Description = "An ASP.Net Core form builder.  This is in early progress, not ready for use yet!!!",
+            Description = "An ASP.Net Core form builder to create the form effortlessly.",
         },
     }
     .AsQueryable();
