--- a/Sockethead.Razor/Views/Shared/_SHSimpleForm.cshtml
+++ b/Sockethead.Razor/Views/Shared/_SHSimpleForm.cshtml
@@ -6,7 +6,7 @@
 }
 
 <form asp-action="@Model.FormOptions.ActionName" asp-controller="@controller" enctype="multipart/form-data"
-      method="@Model.FormOptions.Method">
+      method="@Model.FormOptions.FormMethod">
     <div class=@($"{Model.CssClass}")>
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         @(Model.RenderFormRows())
