--- a/Sockethead.Web/Areas/Samples/Views/Shared/_SocketheadLayout.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Shared/_SocketheadLayout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="Samples" asp-controller="TwoColumnGrid" asp-action="TwoColumnGrid">TwoColumnGrid</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="Samples" asp-controller="FormBuilder" asp-action="FormBuilder">FormBuilder</a>
+                        </li>
                     </ul>
                     @*<partial name="_LoginPartial" />*@
                 </div>
