Fixed errors in Razor files.

--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/OrderColumns.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/OrderColumns.cshtml
@@ -40,7 +40,7 @@
     public int? Released { get; set; }
 
     [Display(AutoGenerateField = false)]
-    public ICollection<CastMember> Cast { get; set; }
+    public ICollection&lt;CastMember&gt; Cast { get; set; }
 }
 </code></pre>
 
