--- a/Sockethead.Web/Areas/Samples/Views/FormBuilder/FormBuilder.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/FormBuilder/FormBuilder.cshtml
@@ -8,9 +8,10 @@
 }
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-5">
         <h4>Basic Usage</h4>
-        @(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
+        @(await Html
+            .SimpleForm(Model, new FormOptions(ActionName: "FormBuilder"))
             .HiddenFor(model => model.Id)
             .EditorFor(model => model.First)
             .EditorFor(model => model.Last)
@@ -18,9 +19,9 @@
             .SubmitButton("Save Changes")
             .RenderAsync())
     </div>
-    <div class="col-md-6">
-        <pre><code>
-@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
+    <div class="col-md-7">
+        <pre><code>@@(await Html
+    .SimpleForm(Model, new FormOptions(ActionName: "FormBuilder"))
     .HiddenFor(model => model.Id)
     .EditorFor(model => model.First)
     .EditorFor(model => model.Last)
@@ -30,9 +31,11 @@
         </code></pre>
         <p>
             The mentioned properties will be included in the Bootstrap form created by this code.
-            You can also use the ASP.NET Core attributes such as <code>[Required(ErrorMessage = "Some message here.")]</code>,
-            <code>[DisplayName("Some Name")]</code>, <code>[MaxLength(20, ErrorMessage = "Too long...")]</code>
-            etc. to control the property's behavior. <br/>
+            You can also use the ASP.NET Core attributes to control the property's behavior.  For example: <br/>
+            <code>[Required(ErrorMessage = "Some message here.")]</code><br/>
+            <code>[DisplayName("Some Name")]</code><br/>
+            <code>[MaxLength(20, ErrorMessage = "Too long...")]</code><br/>
+            <br/>
             Moreover, by passing the ControllerName and FormMethod to the FormOptions along with the ActionName, you can
             manage the behavior of the form.
         </p>
@@ -41,7 +44,7 @@
     
 <hr/>
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-5">
         <h4>Email and Password</h4>
         @(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
             .EditorFor(model => model.Email)
@@ -49,10 +52,9 @@
             .SubmitButton("Login")
             .RenderAsync())
     </div>
-    <div class="col-md-6">
+    <div class="col-md-7">
         <h4>Model</h4>
-        <pre><code>
-@@public class LoginModel
+        <pre><code>@@public class LoginModel
 {
     [DataType(DataType.EmailAddress)] 
     public string Email { get; set; } = "myemail@sockethead.com";
@@ -62,8 +64,7 @@
 }
         </code></pre>
         <h4>Form builder</h4>
-        <pre><code>
-@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
+        <pre><code>@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
     .EditorFor(model => model.Email)
     .EditorFor(model => model.Password)
     .SubmitButton("Login")
@@ -78,7 +79,7 @@
 <hr/>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-5">
         <h4>DateTime and Date</h4>
             @(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
                 .EditorFor(model => model.RandomDate)
@@ -86,9 +87,8 @@
                 .SubmitButton("Save Changes")
                 .RenderAsync())
     </div>
-    <div class="col-md-6">
-        <pre><code>
-@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
+    <div class="col-md-7">
+        <pre><code>@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
     .EditorFor(model => model.RandomDate)
     .EditorFor(model => model.RandomDateOnly)
     .SubmitButton("Login")
@@ -104,9 +104,10 @@
 <hr/>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-5">
         <h4>Number Inputs</h4>
-        @(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
+        @(await Html
+            .SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
             .EditorFor(model => model.RandomDouble)
             .EditorFor(model => model.RandomDecimal)
             .EditorFor(model => model.Float)
@@ -114,9 +115,9 @@
             .SubmitButton("Save Changes")
             .RenderAsync())
     </div>
-    <div class="col-md-6">
-        <pre><code>
-@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
+    <div class="col-md-7">
+        <pre><code>@@(await Html
+    .SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
     .EditorFor(model => model.RandomDouble)
     .EditorFor(model => model.RandomDecimal)
     .EditorFor(model => model.Float)
@@ -135,16 +136,15 @@
 <hr/>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-5">
         <h4>Text Area</h4>
         @(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
             .EditorFor(model => model.FooBarBazBBBlah)
             .SubmitButton("Save Changes")
             .RenderAsync())
     </div>
-    <div class="col-md-6">
-        <pre><code>
-@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
+    <div class="col-md-7">
+        <pre><code>@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
     .EditorFor(model => model.FooBarBazBBBlah)
     .SubmitButton("Save Changes")
     .RenderAsync())
@@ -158,7 +158,7 @@
 <hr/>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-5">
         <h4>Checkboxes and Radios</h4>
         @(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
             .CheckBoxEditorFor(model => model.Flag)
@@ -166,9 +166,8 @@
             .SubmitButton("Save Changes")
             .RenderAsync())
     </div>
-    <div class="col-md-6">
-        <pre><code>
-@@List&lt;SelectListItem&gt; cityList = new List&lt;SelectListItem&gt;
+    <div class="col-md-7">
+        <pre><code>@@List&lt;SelectListItem&gt; cityList = new List&lt;SelectListItem&gt;
         { new("New York", "NY"), new("London", "LDN") };
 
 @@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
@@ -187,7 +186,7 @@
 <hr/>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-5">
         <h4>Drop Down List</h4>
         @(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
             .EnumEditorFor(model => model.SampleEnum)
@@ -195,9 +194,8 @@
             .SubmitButton("Save Changes")
             .RenderAsync())
     </div>
-    <div class="col-md-6">
-        <pre><code>
-@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
+    <div class="col-md-7">
+        <pre><code>@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
     .EnumEditorFor(model => model.SampleEnum)
     .SelectListEditorFor(model => model.City, cityList)
     .SubmitButton("Save Changes")
@@ -211,18 +209,19 @@
 <hr/>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-5">
         <h4>Readonly and Disabled Fields</h4>
-        @(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
+        @(await Html
+            .SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
             .EditorFor(model => model.First, isReadOnly: true)
             .EditorFor(model => model.Last)
             .EditorFor(model => model.Disabled, isDisabled: true)
             .SubmitButton("Save Changes")
             .RenderAsync())
     </div>
-    <div class="col-md-6">
-        <pre><code>
-@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
+    <div class="col-md-7">
+        <pre><code>@@(await Html
+    .SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
     .EditorFor(model => model.First, isReadOnly: true)
     .EditorFor(model => model.Last)
     .EditorFor(model => model.Disabled, isDisabled: true)
@@ -238,7 +237,7 @@
 <hr/>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-5">
         <h4>Append Custom HTML</h4>
         @(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
             .AppendHtml(
@@ -255,9 +254,8 @@
             .AppendHtml(new HtmlContentBuilder().AppendHtml("<div class='form-group'>Html Content Builder</div>"))
             .RenderAsync())
     </div>
-    <div class="col-md-6">
-        <pre><code>
-@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
+    <div class="col-md-7">
+        <pre><code>@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
     .AppendHtml(
         @@&lt;div class="form-group"&gt;
             &lt;label>Append Html - First Name: @@Model.First&lt;/label&gt;
