--- a/Sockethead.Web/Areas/Samples/Views/FormBuilder/FormBuilder.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/FormBuilder/FormBuilder.cshtml
@@ -11,7 +11,7 @@
     <div class="col-md-5">
         <h4>Basic Usage</h4>
         @(await Html
-            .SimpleForm(Model, new FormOptions(ActionName: "FormBuilder"))
+            .SimpleForm(Model, opt => opt.ActionName = "FormBuilder")
             .HiddenFor(model => model.Id)
             .EditorFor(model => model.First)
             .EditorFor(model => model.Last)
@@ -21,7 +21,7 @@
     </div>
     <div class="col-md-7">
         <pre><code>@@(await Html
-    .SimpleForm(Model, new FormOptions(ActionName: "FormBuilder"))
+    .SimpleForm(Model, opt => opt.ActionName = "FormBuilder")
     .HiddenFor(model => model.Id)
     .EditorFor(model => model.First)
     .EditorFor(model => model.Last)
@@ -46,7 +46,8 @@
 <div class="row">
     <div class="col-md-5">
         <h4>Email and Password</h4>
-        @(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
+        @(await Html
+            .SimpleForm(Model, opt => opt.ActionName = "FormBuilder")
             .EditorFor(model => model.Email)
             .EditorFor(model => model.Password)
             .SubmitButton("Login")
@@ -64,7 +65,8 @@
 }
         </code></pre>
         <h4>Form builder</h4>
-        <pre><code>@@(await Html.SimpleForm(Model, new FormOptions { ActionName = "FormBuilder" })
+        <pre><code>@@(await Html
+    .SimpleForm(Model, opt => opt.ActionName = "FormBuilder")
     .EditorFor(model => model.Email)
     .EditorFor(model => model.Password)
     .SubmitButton("Login")
